welcome.lessons.welcome.bat.bool2.InOrderEqual.scala.error
inOrderEqual:10: error: ')' expected but $XMLSTART$< found.
	else if(a < b && b <c)
                           ^inOrderEqual:15: error: illegal start of simple expression
}
^